# pancriondx

./: .gitignore  .vercelignore  README.md  bio_aligned_pdac.py  biological_validation_pipeline.py  calibration_ablation.py  create_synthetic_data.py  evaluate_model.py  full_pdac_experiment.py  hybrid_pdac_classifier.py  hybrid_rf_classifier.py  logreg_classifier.py  logreg_model.pkl  mutation_matrix.csv  package.json  permutation_test.py  perturbation_robustness_test.py  prd.md  pyproject.toml  run_pipeline.py  smad4_analysis.py  train_pdac_classifier.py  validation_stress_test.py
ct-sample data/: sample_selection_summary.csv
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: trace
genomic sample data/patient 1/: PAAD-SAMPLE-001_CNV.tsv  PAAD-SAMPLE-001_mutations.tsv
genomic sample data/patient 2/: PAAD-SAMPLE-002_CNV.tsv  PAAD-SAMPLE-002_mutations.tsv
genomic sample data/patient 3/: PAAD-SAMPLE-003_CNV.tsv  PAAD-SAMPLE-003_mutations.tsv
genomic sample data/patient 4/: PAAD-SAMPLE-004_CNV.tsv  PAAD-SAMPLE-004_mutations.tsv
radiomic model/: radiomic_classifier.py
src/: __init__.py  build_features.py
src/api/: main.py  routes.py
src/data/: __init__.py  gene_panel.json  gene_panel_loader.py  sample.vcf  weight_model.json
src/models/: gene.py  patient.py  (+2 more)
tests/: test_api.py  test_basic.py  test_comprehensive.py  test_interpretation.py  test_panel.py  test_pipeline_script.py  test_risk_engine.py  test_variant_processor.py
transcriptome model/: transcriptomic_classifier.py
(+1341 files in other folders)
